# segway_v3

segway_description/: package.xml
segway_description/meshes/collision/: 110_caster_plate_collision.stl  110_hmi_box_collision.stl  110_powerbase_collision.stl
segway_description/urdf/: accessories.urdf.xacro  description.xacro
segway_description/urdf/RMP_110/: rmp.urdf.xacro
segway_description/urdf/RMP_210/: rmp.urdf.xacro
segway_description/urdf/RMP_220/: rmp.urdf.xacro
segway_description/urdf/RMP_440LE/: rmp.urdf.xacro
segway_description/urdf/RMP_440SE/: rmp.urdf.xacro
segway_description/urdf/RMP_OMNI/: rmp.urdf.xacro
segway_description/urdf/segway_components/: battery.urdf.xacro  caster_assembly.urdf.xacro  i2_wheel.urdf.xacro  inv_double_spacer.urdf.xacro  inv_gearbox_chassis.urdf.xacro  inv_single_spacer.urdf.xacro  large_enclosure.urdf.xacro  omni_flex_pivot.urdf.xacro  omni_lf_rr_wheel.urdf.xacro  omni_lr_rf_wheel.urdf.xacro  omni_structure.urdf.xacro  omni_ui_mount.urdf.xacro  (+7 more)
segway_msgs/: package.xml
segway_msgs/msg/: Configuration.msg
segway_navigation/segway_assisted_teleop/: CMakeLists.txt  package.xml
segway_navigation/segway_assisted_teleop/include/segway_assisted_teleop/: segway_assisted_teleop.h
segway_navigation/segway_navigation/: package.xml
segway_navigation/segway_navigation_apps/: CMakeLists.txt  package.xml
segway_ros/: CMakeLists.txt  package.xml
segway_ros/cfg/: segway.cfg
segway_v3/: package.xml
segway_v3_config/: segway_config.bash  segway_config.sh
segway_v3_config/env-hooks/: 50.segway_config.sh
segway_v3_config/std_configs/: segway_config_RMP_210.sh  segway_config_RMP_210_Navigator.sh  segway_config_RMP_220.sh  segway_config_RMP_220_Navigator.sh  segway_config_RMP_440.sh  segway_config_RMP_440_Navigator.sh  segway_config_RMP_OMNI.sh  segway_config_RMP_OMNI_Navigator.sh
(+28 files in other folders)
